docs/process/v4_1/phase_6c/v3/phase_6c_independent_gate_2_audit_v1.md
# Phase 6C v3 Independent Gate 2 Audit

Status: PASS

Final status: PHASE_6C_V3_FFET_SET_READY_FOR_HUMAN_GATE_REVIEW

```json
{
  "activation_edge_count": 124,
  "semantic_edge_count": 609,
  "union_edge_count": 733,
  "ffet_external_dependency_count": 733,
  "fidelity_row_count": 733,
  "fidelity_fail_count": 0,
  "union_not_ffet_count": 0,
  "ffet_not_union_count": 0,
  "original_semantic_business_logic_hard_rule_count": 593,
  "corrected_semantic_business_logic_hard_rule_count": 141,
  "semantic_adl_hard_rule_count": 46,
  "semantic_conditional_dependency_count": 127,
  "semantic_soft_dependency_count": 295,
  "demotion_or_reclassification_count": 609,
  "uncited_business_logic_hard_rule_count": 0,
  "adl_hard_rule_missing_refs_count": 0,
  "forward_dependency_count": 0,
  "runtime_ffet_schema_touch_count": 0,
  "true_authorization_flag_count": 0,
  "ffet_count": 124,
  "unique_seed_count": 124,
  "orphan_seed_count": 0,
  "ownership_overlap_count": 0
}
```

Blockers: 0.
